--- a/styles/avatar.scss
+++ b/styles/avatar.scss
@@ -1,7 +1,7 @@
 .avatar {
   width: 16rem;
   height: 16rem;
-  margin: -16rem auto 6.4rem;
+  margin: 0 auto 6.4rem;
   border-radius: 50%;
   border: 0.5rem solid var(--current);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
