--- a/styles/avatar.scss
+++ b/styles/avatar.scss
@@ -1,15 +1,10 @@
 .avatar {
-  width: 16rem;
-  height: 16rem;
-  margin: 0 auto 6.4rem;
+  width: 10rem;
+  height: 10rem;
+  margin: 0 0 3.2rem;
   border-radius: 50%;
-  border: 0.5rem solid var(--current);
+  border: 0.4rem solid var(--current);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   overflow: hidden;
-
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
+  object-fit: cover;
 }
